Gradle: update scripts

--- a/gradle/run-mps-ant.gradle
+++ b/gradle/run-mps-ant.gradle
@@ -14,7 +14,7 @@ ext.javaHome = getJavaHome()
 ext.antHome = "$mpsHome/lib/ant"
 
 def antLauncherJarPath = "$antHome/lib/ant-launcher.jar"
-def mpsUtilJarPath = concatJavaClasspath("$mpsHome/lib/util.jar", "$mpsHome/lib/3rd-party-rt.jar")
+def mpsUtilJarPath = getConcatenatedMpsUtilJarPaths()
 
 task mpsAntGenerate(type: Exec) {
     group 'mps-ant-wrapper'
@@ -24,6 +24,7 @@ task mpsAntGenerate(type: Exec) {
 task mpsAntBuild(type: Exec) {
     group 'mps-ant-wrapper'
     commandLine "$javaHome/bin/java", "-classpath", antLauncherJarPath, "-Dmps_home=$mpsHome", "-Dproject_home=$projectDir", "org.apache.tools.ant.launch.Launcher", "-cp", mpsUtilJarPath, "build"
+    mustRunAfter mpsAntGenerate
 }
 
 task mpsAntCheck(type: Exec) {
@@ -76,6 +77,11 @@ task parseTestReportAfterAntCheck {
     }
 }
 
+task mpsAntClean(type: Exec) {
+    group 'mps-ant-wrapper'
+    commandLine "$javaHome/bin/java", "-classpath", antLauncherJarPath, "-Dmps_home=$mpsHome", "org.apache.tools.ant.launch.Launcher", "-cp", mpsUtilJarPath, "clean"
+}
+
 task mpsAntCleanSources(type: Exec) {
     group 'mps-ant-wrapper'
     commandLine "$javaHome/bin/java", "-classpath", antLauncherJarPath, "-Dmps_home=$mpsHome", "org.apache.tools.ant.launch.Launcher", "-cp", mpsUtilJarPath, "cleanSources"
@@ -88,6 +94,9 @@ task mpsAntCleanSources(type: Exec) {
 
 private List<File> collectGeneratedDirs(File baseDir) {
     def dirs = []
+    if (!file(baseDir).exists()) {
+        return dirs
+    }
     file(baseDir).eachDirRecurse {
         if (it.name.endsWith("_gen.caches") || it.name == "classes_gen" || it.name == "source_gen") {
             dirs += it
@@ -122,7 +131,7 @@ private static String concatJavaClasspath(String... paths) {
     }
 }
 
-task openProjectInMpsForCurrentOs(type: Exec) {
+task mpsOpenProjectInMpsForCurrentOs(type: Exec) {
     group 'mps-ant-wrapper'
     dependsOn buildOsSpecificBundle
 
@@ -137,4 +146,12 @@ task openProjectInMpsForCurrentOs(type: Exec) {
     } else if (Os.isFamily(Os.FAMILY_UNIX)) {
         commandLine 'sh', 'build/mps-bundle/mps/bin/mps.sh', projectDir
     }
+}
+
+private String getConcatenatedMpsUtilJarPaths() {
+    def mpsMajorVersion = mpsVersion.takeBefore(".")
+    if (mpsMajorVersion.toInteger() >= 2023) {
+        return concatJavaClasspath("$mpsHome/lib/util-8.jar")
+    }
+    return concatJavaClasspath("$mpsHome/lib/util.jar", "$mpsHome/lib/3rd-party-rt.jar")
 }
