Build: fix until-build

--- a/build.xml
+++ b/build.xml
@@ -57,7 +57,7 @@
         <depends>jetbrains.mps.core</depends>
         <description>Editor to TextGen convertor</description>
         <vendor>JetBrains</vendor>
-        <idea-version since-build="232" until-build="232.9999" />
+        <idea-version since-build="232" until-build="232.*" />
         
         <extensions defaultExtensionNs="com.intellij">
           <mps.LanguageLibrary dir="/languages" />
@@ -76,7 +76,7 @@
         <depends>jetbrains.mps.core</depends>
         <description>Editor to TextGen convertor</description>
         <vendor>JetBrains</vendor>
-        <idea-version since-build="232" until-build="232.9999" />
+        <idea-version since-build="232" until-build="232.*" />
         
         <extensions defaultExtensionNs="com.intellij">
           <mps.LanguageLibrary dir="/languages" />
