Gradle: update gradle scripts

--- a/build.gradle
+++ b/build.gradle
@@ -30,7 +30,7 @@ task mpsBuild {
 
 task mpsClean {
     group 'mps'
-    dependsOn 'mpsAntCleanSources'
+    dependsOn 'mpsAntClean', 'mpsAntCleanSources'
 }
 
 task mpsTest {
